--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-next": "^0.19.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
-    "vue": "^3.4.27",
     "vue-draggable-next": "^2.2.1",
     "vue-lodash": "^2.1.2",
-    "vue-router": "^4.3.0",
-    "vuedraggable": "^4.1.0"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -41,6 +39,7 @@
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.11"
