--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue-draggable-next": "^2.2.1",
+    "vue-draggable-plus": "^0.5.0",
     "vue-lodash": "^2.1.2",
     "vue-router": "^4.3.0"
   },
@@ -34,10 +35,13 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
